--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -365,7 +365,7 @@ strong * {
 				display: -webkit-box;
 				display: -ms-flexbox;
 				display: flex;
-				gap: 42px;
+				gap: 20px;
 				-webkit-transition: -webkit-transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: -webkit-transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -402,9 +402,8 @@ strong * {
 								        transform: translateX(0);
 				}
 }
-.header .site-menu li.lang-item::marker {
-				display: none;
-				opacity: 0;
+.header .site-menu .lang-item {
+				list-style: none;
 }
 .header .site-menu__first-level {
 				color: #ffffff;
