--- a/wp-content/themes/gtoken/scss/login.scss
+++ b/wp-content/themes/gtoken/scss/login.scss
@@ -1,6 +1,6 @@
 $form-background: #fff;
 $form-label: #111;
-$accent-color: #34375A;
+$accent-color: #3ACBED;
 $logo-aspect-ratio: 389/75;
 
 body.login {
