--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -22,16 +22,23 @@ body:not(.folded) #adminmenuwrap:before {
 				margin: 20px auto 20px;
 }
 
-#adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
-				background: #34375A;
+#adminmenu,
+#adminmenu .wp-submenu,
+#adminmenuback,
+#adminmenuwrap {
+				background: #231F20;
 }
 
-#adminmenu .wp-has-current-submenu .wp-submenu .wp-submenu-head, #adminmenu .wp-menu-arrow, #adminmenu .wp-menu-arrow div, #adminmenu li.current a.menu-top, #adminmenu li.wp-has-current-submenu a.wp-has-current-submenu {
+#adminmenu .wp-has-current-submenu .wp-submenu .wp-submenu-head,
+#adminmenu .wp-menu-arrow,
+#adminmenu .wp-menu-arrow div,
+#adminmenu li.current a.menu-top,
+#adminmenu li.wp-has-current-submenu a.wp-has-current-submenu {
 				background: #398faf;
 }
 
 #wpadminbar {
-				background: #21233a;
+				background: #080707;
 }
 
 #wp-admin-bar-wp-logo {
@@ -73,7 +80,7 @@ Blocks Styles
 				Se usa igual que fade, pero crea un loop para animar los elementos de forma ordenada
 				*/
 				/* Text Block Custom Style */
-				@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital@0;1&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap");
+				@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap");
 				/* @font-face {
 				    font-family: 'Playfair Display';
 				    src: url('fonts/PlayfairDisplay-Black.eot');
@@ -1632,7 +1639,7 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text {
 				position: relative;
-				max-width: 50%;
+				max-width: 65%;
 				z-index: 2;
 }
 @media only screen and (max-width: 1150px) {
@@ -1643,11 +1650,9 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text .title {
 				color: #ffffff;
 				font-family: "Bebas Neue", sans-serif;
-				font-size: clamp(60px, -49.2px + 0.182 * 100vw, 160px);
+				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
 				line-height: 1;
-				font-weight: 400;
-				text-transform: uppercase;
-				letter-spacing: 10px;
+				font-weight: 500;
 				font-size: 100px;
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text p {
@@ -2699,27 +2704,27 @@ Blocks Styles
 				}
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__text .title {
-				font-size: clamp(30px, -3px + 0.055 * 100vw, 60px);
-				color: #54A8C7;
-				line-height: 1.2;
-				font-weight: 600;
-				text-transform: uppercase;
+				font-size: clamp(50px, -24.4px + 0.124 * 100vw, 118px);
+				color: #231F20;
+				line-height: 1;
+				font-weight: 300;
 				color: #231F20;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__text .title span {
 				color: #FB3BA5;
 				font-style: italic;
-				text-transform: capitalize;
-				letter-spacing: 3px;
+				font-size: clamp(50px, -26.2px + 0.127 * 100vw, 120px);
+				font-weight: 300;
+				line-height: 1;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__description {
-				max-width: 45%;
+				max-width: 57%;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__description p {
-				font-size: clamp(18px, 13.8px + 0.007 * 100vw, 22px);
-				color: #231F20;
+				font-size: clamp(18px, 9px + 0.015 * 100vw, 26px);
+				color: #000;
 				font-weight: 400;
-				line-height: 1.6;
+				line-height: 1.5;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link {
 				display: -webkit-box;
@@ -2731,11 +2736,15 @@ Blocks Styles
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
 				        align-items: center;
+				margin-top: 34px;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link a {
-				font-size: clamp(20px, 13.4px + 0.011 * 100vw, 26px);
+				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
 				text-decoration: none;
-				color: #231F20;
+				color: #000;
+				font-weight: 400;
+				line-height: 1;
+				font-style: italic;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link a span {
 				color: #EFF7FA;
@@ -2744,20 +2753,39 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link::before {
 				content: "";
 				background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
-				margin-right: 20px;
 				display: inline-block;
-				width: 20px;
-				height: 20px;
+				margin-right: 15px;
+				display: inline-block;
+				width: 29px;
+				height: 29px;
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs {
-				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
-				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+				padding-top: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
+				padding-bottom: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question {
 				color: #FB3BA5;
-				font-size: 30px;
+				font-size: clamp(22px, 13px + 0.015 * 100vw, 30px);
+				font-weight: 400;
+				line-height: 1;
+				font-style: italic;
+}
+.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item {
+				padding: 30px 0 30px 64px;
+				border-bottom: 1px solid #FB3BA5;
+				width: 100%;
+				cursor: pointer;
+}
+.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item:last-child {
+				border-bottom: none;
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__answer {
+				font-size: clamp(18px, 9px + 0.015 * 100vw, 26px);
+				font-weight: 400;
+				line-height: 1.4;
+				color: #ffffff;
+				padding-top: 10px;
+				font-style: italic;
 				display: none;
 }
 .editor-styles-wrapper .acf-block-preview .image-text {
@@ -2833,7 +2861,7 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .number_grid__cont {
 				display: -ms-grid;
 				display: grid;
-				-ms-grid-columns: 1fr 40px 1fr 40px 1fr 40px 1fr;
+				-ms-grid-columns: 1fr 90px 1fr 90px 1fr 90px 1fr;
 				grid-template-columns: repeat(4, 1fr);
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
@@ -2841,17 +2869,18 @@ Blocks Styles
 				-webkit-box-pack: center;
 				    -ms-flex-pack: center;
 				        justify-content: center;
-				gap: 40px;
+				gap: 90px;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
-				font-size: clamp(36px, -77.4px + 0.189 * 100vw, 140px);
-				font-weight: 700;
-				color: #000;
+				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
+				font-weight: 500;
+				line-height: 1;
+				color: #231F20;
 				font-family: "Bebas Neue", sans-serif;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
-				font-size: clamp(25px, -8.6px + 0.056 * 100vw, 56px);
-				font-weight: 400;
+				font-size: clamp(25px, -35px + 0.1 * 100vw, 80px);
+				font-weight: 500;
 				color: #ffffff;
 				font-family: "Bebas Neue", sans-serif;
 				line-height: 1;
