--- a/wp-content/themes/gtoken/login.css
+++ b/wp-content/themes/gtoken/login.css
@@ -66,7 +66,7 @@ body.login #backtoblog {
 }
 
 body.login #wp-submit {
-	background: #34375A;
+	background: #FB3BA5;
 	border: none;
 	font-weight: bold;
 	text-transform: uppercase;
@@ -76,7 +76,7 @@ body.login #wp-submit {
 }
 
 body.login #wp-submit:hover {
-	background: #052962;
+	background: #231F20;
 }
 
 body.login #nav {
