--- a/wp-content/themes/gtoken/scss/base/_typography.scss
+++ b/wp-content/themes/gtoken/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital@0;1&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap');
 
 /* @font-face {
     font-family: 'Playfair Display';
