--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -1,13 +1,33 @@
 .accordion--faqs {
-    padding-top: rv(60px, 100px);
-    padding-bottom: rv(60px, 100px);
+    padding-top: rv(60px, 125px);
+    padding-bottom: rv(60px, 125px);
 
     .accordion__question {
         color: $pink-color;
-        font-size: 30px;
+        font-size: rv(22px, 30px);
+        font-weight: 400;
+        line-height: 1;
+        font-style: italic;
+    }
+
+    .accordion__item {
+        padding: 30px 0 30px 64px;
+        border-bottom: 1px solid $pink-color;
+        width: 100%;
+        cursor: pointer;
+
+        &:last-child {
+            border-bottom: none;
+        }
     }
 
     .accordion__answer {
+        font-size: rv(18px, 26px);
+        font-weight: 400;
+        line-height: 1.4;
+        color: $white;
+        padding-top: 10px;
+        font-style: italic;
         display: none;
     }
 }
