--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -17,30 +17,31 @@
 
         &__text {
             .title {
-                font-size: rv(30px, 60px);
-                color: $secondary-color;
-                line-height: 1.2;
-                font-weight: 600;
-                text-transform: uppercase;
+                font-size: rv(50px, 118px);
+                color: $light-black;
+                line-height: 1;
+                font-weight: 300;
+                //text-transform: uppercase;
                 color: $light-black;
 
                 span {
                     color: $pink-color;
                     font-style: italic;
-                    text-transform: capitalize;
-                    letter-spacing: 3px;
+                    font-size: rv(50px, 120px);
+                    font-weight: 300;
+                    line-height: 1;
                 }
             }
         }
 
         &__description {
-            max-width: 45%;
+            max-width: 57%;
 
             p {
-                font-size: rv(18px, 22px);
-                color: $light-black;
+                font-size: rv(18px, 26px);
+                color: $black;
                 font-weight: 400;
-                line-height: 1.6;
+                line-height: 1.5;
             }
         }
 
@@ -48,11 +49,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 34px;
 
             a {
-                font-size: rv(20px, 26px);
+                font-size: rv(26px, 60px);
                 text-decoration: none;
-                color: $light-black;
+                color: $black;
+                font-weight: 400;
+                line-height: 1;
+                font-style: italic;
+
 
                 span {
                     color: $light-blue;
@@ -63,10 +69,11 @@
             &::before {
                 content: '';
                 background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
-                margin-right: 20px;
                 display: inline-block;
-                width: 20px;
-                height: 20px;
+                margin-right: 15px;
+                display: inline-block;
+                width: 29px;
+                height: 29px;
             }
         }
     }
