--- a/wp-content/themes/gtoken/scss/editor.scss
+++ b/wp-content/themes/gtoken/scss/editor.scss
@@ -1,11 +1,11 @@
 @charset 'UTF-8';
-$editor-sidebar-background: #34375A;
-$editor-accent-color: darken(#54A8C7,10);
-$editor-adminbar: darken($editor-sidebar-background,10);
+$editor-sidebar-background: #231F20;
+$editor-accent-color: darken(#54A8C7, 10);
+$editor-adminbar: darken($editor-sidebar-background, 10);
 $editor-logo-aspect-ratio: 2.320513;
 $editor: "true";
 
-:root{
+:root {
   --fade-opacity: 1;
   --fade-transform: translateX(0px) translateY(0px);
   --p100: 100%;
@@ -15,9 +15,9 @@ $editor: "true";
 /*
 Admin Styles
 */
-body:not(.folded)  {
-  #adminmenuwrap{
-    &:before{
+body:not(.folded) {
+  #adminmenuwrap {
+    &:before {
       background-image: url(images/admin/logo_editor.svg);
       background-size: contain;
       background-repeat: no-repeat;
@@ -29,18 +29,29 @@ body:not(.folded)  {
       display: block;
       margin: 20px auto 20px;
     }
-  }  
+  }
 }
-#adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap{
+
+#adminmenu,
+#adminmenu .wp-submenu,
+#adminmenuback,
+#adminmenuwrap {
   background: $editor-sidebar-background;
 }
-#adminmenu .wp-has-current-submenu .wp-submenu .wp-submenu-head, #adminmenu .wp-menu-arrow, #adminmenu .wp-menu-arrow div, #adminmenu li.current a.menu-top, #adminmenu li.wp-has-current-submenu a.wp-has-current-submenu{
+
+#adminmenu .wp-has-current-submenu .wp-submenu .wp-submenu-head,
+#adminmenu .wp-menu-arrow,
+#adminmenu .wp-menu-arrow div,
+#adminmenu li.current a.menu-top,
+#adminmenu li.wp-has-current-submenu a.wp-has-current-submenu {
   background: $editor-accent-color;
 }
-#wpadminbar{
+
+#wpadminbar {
   background: $editor-adminbar;
 }
-#wp-admin-bar-wp-logo{
+
+#wp-admin-bar-wp-logo {
   display: none;
 }
 
@@ -50,15 +61,16 @@ body:not(.folded)  {
 /* 
 Blocks Styles
 */
-.editor-styles-wrapper{
-  .acf-block-preview{
+.editor-styles-wrapper {
+  .acf-block-preview {
     @import 'main';
-  }  
+  }
 
-  .wp-block{
+  .wp-block {
     overflow: hidden;
   }
-  [data-waypoint] *{
+
+  [data-waypoint] * {
     opacity: 1;
     transform: none;
   }
@@ -70,4 +82,4 @@ Blocks Styles
 }
 
 
-@import 'editor-blocks'; 
+@import 'editor-blocks';
