--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -31,7 +31,7 @@
 
         &__text {
             position: relative;
-            max-width: 50%;
+            max-width: 65%;
             z-index: 2;
 
             @include responsive('desktop-s') {
@@ -41,11 +41,10 @@
             .title {
                 color: $white;
                 font-family: $secondary-font;
-                font-size: rv(60px, 160px);
+                font-size: rv(60px, 281px);
                 line-height: 1;
-                font-weight: 400;
-                text-transform: uppercase;
-                letter-spacing: 10px;
+                font-weight: 500;
+                //text-transform: uppercase;
 
                 @if editor() {
                     font-size: 100px;
