--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -7,7 +7,7 @@ Text Domain: palermo
 font-family: 'Bebas Neue', sans-serif;
 font-family: 'Bitter', serif;
 font-family: 'Courier Prime', monospace; */
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital@0;1&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap");
 .image-background {
 				position: absolute;
 				top: 0;
@@ -1610,7 +1610,7 @@ select option {
 }
 .hero--home .hero__text {
 				position: relative;
-				max-width: 50%;
+				max-width: 65%;
 				z-index: 2;
 }
 @media only screen and (max-width: 1150px) {
@@ -1621,11 +1621,9 @@ select option {
 .hero--home .hero__text .title {
 				color: #ffffff;
 				font-family: "Bebas Neue", sans-serif;
-				font-size: clamp(60px, -49.2px + 0.182 * 100vw, 160px);
+				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
 				line-height: 1;
-				font-weight: 400;
-				text-transform: uppercase;
-				letter-spacing: 10px;
+				font-weight: 500;
 }
 .hero--home .hero__text p {
 				font-size: clamp(20px, 0.2px + 0.033 * 100vw, 38px);
@@ -2757,27 +2755,27 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				}
 }
 .text-papper .content__text .title {
-				font-size: clamp(30px, -3px + 0.055 * 100vw, 60px);
-				color: #54A8C7;
-				line-height: 1.2;
-				font-weight: 600;
-				text-transform: uppercase;
+				font-size: clamp(50px, -24.4px + 0.124 * 100vw, 118px);
+				color: #231F20;
+				line-height: 1;
+				font-weight: 300;
 				color: #231F20;
 }
 .text-papper .content__text .title span {
 				color: #FB3BA5;
 				font-style: italic;
-				text-transform: capitalize;
-				letter-spacing: 3px;
+				font-size: clamp(50px, -26.2px + 0.127 * 100vw, 120px);
+				font-weight: 300;
+				line-height: 1;
 }
 .text-papper .content__description {
-				max-width: 45%;
+				max-width: 57%;
 }
 .text-papper .content__description p {
-				font-size: clamp(18px, 13.8px + 0.007 * 100vw, 22px);
-				color: #231F20;
+				font-size: clamp(18px, 9px + 0.015 * 100vw, 26px);
+				color: #000;
 				font-weight: 400;
-				line-height: 1.6;
+				line-height: 1.5;
 }
 .text-papper .content__link {
 				display: -webkit-box;
@@ -2789,11 +2787,15 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
 				        align-items: center;
+				margin-top: 34px;
 }
 .text-papper .content__link a {
-				font-size: clamp(20px, 13.4px + 0.011 * 100vw, 26px);
+				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
 				text-decoration: none;
-				color: #231F20;
+				color: #000;
+				font-weight: 400;
+				line-height: 1;
+				font-style: italic;
 }
 .text-papper .content__link a span {
 				color: #EFF7FA;
@@ -2802,21 +2804,40 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 .text-papper .content__link::before {
 				content: "";
 				background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
-				margin-right: 20px;
 				display: inline-block;
-				width: 20px;
-				height: 20px;
+				margin-right: 15px;
+				display: inline-block;
+				width: 29px;
+				height: 29px;
 }
 
 .accordion--faqs {
-				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
-				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+				padding-top: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
+				padding-bottom: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
 }
 .accordion--faqs .accordion__question {
 				color: #FB3BA5;
-				font-size: 30px;
+				font-size: clamp(22px, 13px + 0.015 * 100vw, 30px);
+				font-weight: 400;
+				line-height: 1;
+				font-style: italic;
+}
+.accordion--faqs .accordion__item {
+				padding: 30px 0 30px 64px;
+				border-bottom: 1px solid #FB3BA5;
+				width: 100%;
+				cursor: pointer;
+}
+.accordion--faqs .accordion__item:last-child {
+				border-bottom: none;
 }
 .accordion--faqs .accordion__answer {
+				font-size: clamp(18px, 9px + 0.015 * 100vw, 26px);
+				font-weight: 400;
+				line-height: 1.4;
+				color: #ffffff;
+				padding-top: 10px;
+				font-style: italic;
 				display: none;
 }
 
@@ -2894,7 +2915,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 .number_grid__cont {
 				display: -ms-grid;
 				display: grid;
-				-ms-grid-columns: 1fr 40px 1fr 40px 1fr 40px 1fr;
+				-ms-grid-columns: 1fr 90px 1fr 90px 1fr 90px 1fr;
 				grid-template-columns: repeat(4, 1fr);
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
@@ -2902,17 +2923,18 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-box-pack: center;
 				    -ms-flex-pack: center;
 				        justify-content: center;
-				gap: 40px;
+				gap: 90px;
 }
 .number_grid__cont .number {
-				font-size: clamp(36px, -77.4px + 0.189 * 100vw, 140px);
-				font-weight: 700;
-				color: #000;
+				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
+				font-weight: 500;
+				line-height: 1;
+				color: #231F20;
 				font-family: "Bebas Neue", sans-serif;
 }
 .number_grid__cont .number_text {
-				font-size: clamp(25px, -8.6px + 0.056 * 100vw, 56px);
-				font-weight: 400;
+				font-size: clamp(25px, -35px + 0.1 * 100vw, 80px);
+				font-weight: 500;
 				color: #ffffff;
 				font-family: "Bebas Neue", sans-serif;
 				line-height: 1;
