--- a/wp-content/themes/gtoken/scss/layout/_footer.scss
+++ b/wp-content/themes/gtoken/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .site-footer {
-	background: #221f20d9;
+	//background: #221f20d9;
 	color: $white;
+	margin-top: -5px;
 
 	.container {
 		//display: flex;
