--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -7,6 +7,7 @@
         @extend .container;
     }
 
+
     .swiper-wrapper {
         text-align: center;
         align-items: center;
@@ -32,7 +33,9 @@
     }
 
     .swiper-slide {
-        max-width: 400px;
+        width: 33.333%;
+        box-sizing: border-box;
+        padding: 0 15px;
 
         img {
             max-width: 320px;
