--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -51,19 +51,24 @@
             align-items: center;
             margin-top: 34px;
 
+            &__text {
+                font-size: rv(26px, 60px);
+                color: $black;
+                font-weight: 400;
+                line-height: 1;
+                font-style: italic;
+            }
+
             a {
                 font-size: rv(26px, 60px);
                 text-decoration: none;
-                color: $black;
+                color: $light-blue;
+                text-transform: capitalize;
                 font-weight: 400;
                 line-height: 1;
                 font-style: italic;
 
 
-                span {
-                    color: $light-blue;
-                    text-transform: capitalize;
-                }
             }
 
             &::before {
