--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -38,7 +38,7 @@
         padding: 0 15px;
 
         img {
-            //max-width: 320px;
+            max-width: 320px;
             margin-bottom: 20px;
         }
 
