--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -1653,6 +1653,11 @@ Blocks Styles
 				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
 				line-height: 1;
 				font-weight: 500;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				font-size: 100px;
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text p {
@@ -2709,6 +2714,11 @@ Blocks Styles
 				line-height: 1;
 				font-weight: 300;
 				color: #231F20;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__text .title span {
 				color: #FB3BA5;
@@ -2725,6 +2735,13 @@ Blocks Styles
 				color: #000;
 				font-weight: 400;
 				line-height: 1.5;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link {
 				display: -webkit-box;
@@ -2737,6 +2754,13 @@ Blocks Styles
 				    -ms-flex-align: center;
 				        align-items: center;
 				margin-top: 34px;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.4s;
+				        transition-delay: 0.4s;
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link__text {
 				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
@@ -2748,7 +2772,7 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link a {
 				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
 				text-decoration: none;
-				color: #EFF7FA;
+				color: #231F20;
 				text-transform: capitalize;
 				font-weight: 400;
 				line-height: 1;
@@ -2908,12 +2932,41 @@ Blocks Styles
 				    -ms-flex-direction: column;
 				        flex-direction: column;
 				gap: 40px;
+				min-height: 505px;
+}
+.editor-styles-wrapper .acf-block-preview .number_grid__item:nth-child(1) {
 				opacity: var(--fade-opacity, 0);
 				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
 				        transform: var(--fade-transform, translateX(0) translateY(100px));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-				min-height: 505px;
+}
+.editor-styles-wrapper .acf-block-preview .number_grid__item:nth-child(2) {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
+}
+.editor-styles-wrapper .acf-block-preview .number_grid__item:nth-child(3) {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.4s;
+				        transition-delay: 0.4s;
+}
+.editor-styles-wrapper .acf-block-preview .number_grid__item:nth-child(4) {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.6s;
+				        transition-delay: 0.6s;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__item .number_cont {
 				display: -webkit-box;
@@ -2939,12 +2992,12 @@ Blocks Styles
 				font-weight: 400;
 				color: #ffffff;
 				opacity: var(--fade-opacity, 0);
-				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
-				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-				-webkit-transition-delay: 0.2s;
-				        transition-delay: 0.2s;
+				-webkit-transition-delay: 0.8s;
+				        transition-delay: 0.8s;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__link a {
 				color: #000;
@@ -2996,6 +3049,7 @@ Blocks Styles
 				padding: 0 15px;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-slide img {
+				max-width: 320px;
 				margin-bottom: 20px;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-slide p {
