--- a/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
@@ -34,8 +34,24 @@
         display: flex;
         flex-direction: column;
         gap: 40px;
-        @include fade(0, 100px, true, 0);
+        //@include fade(0, 100px, true, 0);
         min-height: 505px;
+
+        &:nth-child(1) {
+            @include fade(0, 100px, true, 0);
+        }
+
+        &:nth-child(2) {
+            @include fade(0, 100px, true, 1);
+        }
+
+        &:nth-child(3) {
+            @include fade(0, 100px, true, 2);
+        }
+
+        &:nth-child(4) {
+            @include fade(0, 100px, true, 3);
+        }
 
         .number_cont {
             display: flex;
@@ -58,7 +74,7 @@
         font-style: italic;
         font-weight: 400;
         color: $white;
-        @include fade(0, 100px, true, 1);
+        @include fade(-100px, 0, true, 4);
 
         a {
             color: $black;
