--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -1624,6 +1624,11 @@ select option {
 				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
 				line-height: 1;
 				font-weight: 500;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .hero--home .hero__text p {
 				font-size: clamp(20px, 0.2px + 0.033 * 100vw, 38px);
@@ -2760,6 +2765,11 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				line-height: 1;
 				font-weight: 300;
 				color: #231F20;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .text-papper .content__text .title span {
 				color: #FB3BA5;
@@ -2776,6 +2786,13 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				color: #000;
 				font-weight: 400;
 				line-height: 1.5;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
 }
 .text-papper .content__link {
 				display: -webkit-box;
@@ -2788,6 +2805,13 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				    -ms-flex-align: center;
 				        align-items: center;
 				margin-top: 34px;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.4s;
+				        transition-delay: 0.4s;
 }
 .text-papper .content__link__text {
 				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
@@ -2799,7 +2823,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 .text-papper .content__link a {
 				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
 				text-decoration: none;
-				color: #EFF7FA;
+				color: #231F20;
 				text-transform: capitalize;
 				font-weight: 400;
 				line-height: 1;
@@ -2962,12 +2986,41 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				    -ms-flex-direction: column;
 				        flex-direction: column;
 				gap: 40px;
+				min-height: 505px;
+}
+.number_grid__item:nth-child(1) {
 				opacity: var(--fade-opacity, 0);
 				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
 				        transform: var(--fade-transform, translateX(0) translateY(100px));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-				min-height: 505px;
+}
+.number_grid__item:nth-child(2) {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
+}
+.number_grid__item:nth-child(3) {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.4s;
+				        transition-delay: 0.4s;
+}
+.number_grid__item:nth-child(4) {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.6s;
+				        transition-delay: 0.6s;
 }
 .number_grid__item .number_cont {
 				display: -webkit-box;
@@ -2993,12 +3046,12 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				font-weight: 400;
 				color: #ffffff;
 				opacity: var(--fade-opacity, 0);
-				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
-				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-				-webkit-transition-delay: 0.2s;
-				        transition-delay: 0.2s;
+				-webkit-transition-delay: 0.8s;
+				        transition-delay: 0.8s;
 }
 .number_grid__link a {
 				color: #000;
@@ -3051,6 +3104,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				padding: 0 15px;
 }
 .slider-links .swiper-slide img {
+				max-width: 320px;
 				margin-bottom: 20px;
 }
 .slider-links .swiper-slide p {
