--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -3135,6 +3135,9 @@ Blocks Styles
 				position: relative;
 				margin-bottom: 40px;
 				z-index: 1;
+				width: 100vw;
+				max-width: 100vw;
+				overflow: visible;
 }
 @media only screen and (max-width: 900px) {
 				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-wrapper {
