--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -124,6 +124,9 @@
         margin-bottom: 40px;
         z-index: 1;
         //gap: 40px;
+        width: 100vw;
+        max-width: 100vw;
+        overflow: visible;
 
         @include responsive('tablet-v') {
             gap: 0;
