--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -2797,18 +2797,44 @@ Blocks Styles
 				font-weight: 400;
 				line-height: 1;
 				font-style: italic;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: justify;
+				    -ms-flex-pack: justify;
+				        justify-content: space-between;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+}
+.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question::after {
+				content: "";
+				background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
+				display: inline-block;
+				width: 29px;
+				height: 29px;
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item {
-				padding: 30px 0 30px 64px;
+				padding: 30px 30px 30px 64px;
 				border-bottom: 1px solid #FB3BA5;
 				width: 100%;
 				cursor: pointer;
+				-webkit-transition: all 0.3s ease;
+				transition: all 0.3s ease;
+				/*   &.js-open {
+				    display: flex;
+				    flex-direction: column;
+				} */
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item:last-child {
 				border-bottom: none;
 }
+.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item:hover .accordion__question {
+				-webkit-transform: translate(10px);
+				        transform: translate(10px);
+}
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__answer {
-				font-size: clamp(18px, 9px + 0.015 * 100vw, 26px);
+				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
 				font-weight: 400;
 				line-height: 1.4;
 				color: #ffffff;
@@ -2856,11 +2882,13 @@ Blocks Styles
 				height: 750px;
 				-o-object-fit: cover;
 				   object-fit: cover;
+				margin-top: 50px;
 }
 .editor-styles-wrapper .acf-block-preview .image-text__image__logo {
 				position: absolute;
 				top: 0;
 				left: 0;
+				max-width: 220px;
 }
 .editor-styles-wrapper .acf-block-preview .image-text__image__logo img {
 				width: auto;
